--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
-    <title>Help</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Very important</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
   </body>
+  <body>
+    <h1>Pixel Terrarium</h1>
+    <canvas id="gameCanvas"></canvas>
+    <script src="game.js"></script>
+</body>
 </html>
